test_data/end_to_end/err__no_lookahead/stderr.txt
error: expected expression, found `,`
  --> main.cz:3:5
3 |     ,
        ~